etc/security/perfsonar_firewall_settings.conf
# Accept ICMP
-A perfSONAR -p icmp --icmp-type any -j ACCEPT
-A perfSONAR -p icmpv6 -j ACCEPT

# =-=-=-=-=-=- Core perfSONAR Services =-=-=-=-=-=-

# Incoming Web (esmond and Toolkit GUI) - TCP Ports 80 and 443
-A perfSONAR -m tcp -p tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A perfSONAR -m tcp -p tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT

# Incoming NTP - UDP Port 123
-A perfSONAR -p udp --dport 123 -m udp -j ACCEPT 

# =-=-=-=-=-=- perfSONAR Measurement Tools =-=-=-=-=-=-

# UDP Traceroute (Incoming)
-A perfSONAR -m udp -p udp --dport 33434:33634 -j ACCEPT

# NPAD Control (Incoming)
-A perfSONAR -m state --state NEW,ESTABLISHED -m tcp -p tcp --dport 8000 -j ACCEPT 

# NPAD Test (Incoming)
-A perfSONAR -m state --state NEW,ESTABLISHED -m tcp -p tcp --dport 8001:8020 -j ACCEPT 

# NDT Control (Incoming)
-A perfSONAR -m state --state NEW,ESTABLISHED -m tcp -p tcp --dport 7123 -j ACCEPT 

# NDT Test (Incoming)
-A perfSONAR -m state --state NEW,ESTABLISHED -m tcp -p tcp --dport 3001:3003 -j ACCEPT 

# OWAMP Control (Incoming)
-A perfSONAR -m state --state NEW,ESTABLISHED -m tcp -p tcp --dport 861 -j ACCEPT  

# OWAMP Test (Incoming)
-A perfSONAR -m udp -p udp --dport 8760:9960 -j ACCEPT 

# BWCTL Control (Incoming)
-A perfSONAR -m state --state NEW,ESTABLISHED -m tcp -p tcp --dport 4823 -j ACCEPT 

# BWCTL Peer (Incoming, TCP and UDP)
-A perfSONAR -m state --state NEW,ESTABLISHED -m tcp -p tcp --dport 6001:6200 -j ACCEPT 
-A perfSONAR -m udp -p udp --dport 6001:6200 -j ACCEPT 

# BWCTL Test (Incoming, TCP and UDP)
-A perfSONAR -m state --state NEW,ESTABLISHED -m tcp -p tcp --dport 5000:5900 -j ACCEPT 
-A perfSONAR -m udp -p udp --dport 5000:5900 -j ACCEPT
